opa-gatekeeper/repository/test.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: test
  name: test
spec:
  containers:
  - image: nginx
    name: test
    resources: {}
  - image: busybox
    name: busybox
    command:
    - sh
    - -c 
    - sleep 3600
  - image: alpine/curl
    name: alpine 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
