opa-gatekeeper/repository/validation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRepository
metadata:
  name: required-image-validation
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    repository:
      image: nginx
